--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 <h1>🎉 Olimpia compie 5 anni 🎉</h1>
 <p>📅 16 Agosto</p>
 <p>⏰ Ore 17:00</p>
-<p>📍 Giardino Dei Ciliegi</p>
+<a href="https://share.google/FvgmSH9CQ59L850hw">📍 Bar Pasticceria Olimpia</a></p>
 
-<a href="https://wa.me/393387517139?text=Ciao%20confermo%20la%20mia%20presenza%20alla%20festa%20di%20Olimpia!" class="btn">
+<a href="https://wa.me/3665245834?text=Ciao%20confermo%20la%20mia%20presenza%20alla%20festa%20di%20Olimpia!" class="btn">
     Conferma su WhatsApp
 </a>
 
@@ -119,3 +119,4 @@ window.addEventListener('resize', () => {
 
 </body>
 </html>
+
